# agent-bridge

./: .gitignore  Cargo.toml  README.md
crates/agent-bridge/: Cargo.toml
crates/agent-bridge-core/: Cargo.toml
crates/agent-bridge-core/src/: adapters.rs  error.rs  fsutil.rs  instructions.rs  lib.rs  paths.rs  skills.rs  symlink.rs  sync.rs  tool.rs
crates/agent-bridge-core/src/mcp/: env_syntax.rs  mod.rs
crates/agent-bridge/src/: main.rs
