[workspace]
resolver = "2"
members = [
    "crates/agent-bridge",
    "crates/agent-bridge-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["yufan"]
repository = "https://github.com/yufan022/agent-bridge"

[workspace.dependencies]
agent-bridge-core = { path = "crates/agent-bridge-core" }
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
dunce = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tempfile = "3"
thiserror = "2"
toml = "0.8"
toml_edit = "0.22"
walkdir = "2"
